# pybats-detection

./: .gitignore  LICENSE.md  MANIFEST.in  NEWS.md  README.Rmd  README.md  bump_version.sh  requirements.txt  setup.cfg  setup.py  setup_template.cfg
examples/: 01__smooth.Rmd  02__manual_intervention.Rmd  generate_report.R  index.Rmd
src/pybats_detection/: intervention.py  loader.py  monitor.py  random_dlm.py  smooth.py  utils.py
src/pybats_detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pybats_detection/data/: air_passengers.csv  pole_market_share.csv
tests/: test__intervention.py  test__monitor.py  test__smooth.py
vignettes/: 01__smooth.Rmd  02__manual_intervention.Rmd  03__automatic_monitor.Rmd  generate_vignettes.R  pybats_detection.Rmd  pybats_detection.html  pybats_detection.tex  quick_start.Rmd  quick_start.html
