[metadata]
name = pybats-detection
version = 0.0.3
author = André Menezes and Eduardo Pinheiro
author_email = andrefelipemaringa@gmail.com
description = Tools for outlier and structural changes detection in time series analysis using Bayesian Dynamic Linear Model.
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = /data*.csv
